# rasp-leds-v2

./: Cargo.toml  LICENSE  README.md  README.org  build  project.org  scratch.org
examples/: meteor.rs  moving_dot.rs  rainbow.rs
pkg/color/src/: lib.rs
pkg/controller/: Cargo.toml
pkg/controller/src/: controller.rs  hardware.rs  lib.rs  simulate.rs
rasp-leds/: Cargo.toml
rasp-leds/examples/: meteor.rs  moving_dot.rs  rainbow.rs
rasp-leds/src/: color.rs  error.rs  lib.rs  runner.rs
rasp-leds/src/controller/: controller.rs  hardware.rs  mod.rs  simulate.rs
rasp-leds/src/patterns/: meteor.rs  mod.rs  moving_dot.rs  rainbow.rs  solid.rs
rasp-leds/src/patterns/spotify/: mod.rs  playing_color.rs
rasp-leds/tests/: color.rs  runner.rs
src/: color.rs  lib.rs  main.rs  runner.rs
src/controller/: controller.rs  hardware.rs  simulate.rs
src/patterns/: meteor.rs  mod.rs  moving_dot.rs  pattern.rs  rainbow.rs
tests/: color.rs  runner.rs
