[package]
name = "rasp-leds-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
minifb = { version = "0.20.0", optional = true }
rs_ws281x = { version = "*", optional = true }
enum_dispatch = "^0.3.7"
rand = "0.8.4"

[features]
default = ["simulate"]
simulate = ["minifb"]
hardware = ["rs_ws281x"]

[[example]]
name = "moving_dot"
path = "examples/moving_dot.rs"
