[package]
name = "rasp-leds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasp-leds-hal = { path = "./rasp-leds", default-features = false }
anyhow = "1.0.51"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rocket = {version =  "0.5.0-rc.1", features = ["json"]}
tokio = {version = "1.17.0", features = ["sync", "rt"]}

[features]
default = ["simulate"]
simulate = ["rasp-leds-hal/simulate", "rasp-leds-hal/serde"]
hardware = ["rasp-leds-hal/hardware", "rasp-leds-hal/serde"]

[workspace]
members = [
        "rasp-leds"
]
