[package]
name = "rasp-leds-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
minifb = { version = "0.20.0", optional = true }
rs_ws281x = { version = "*", optional = true }
enum_dispatch = "^0.3.7"
rand = "0.8.4"
tokio = {version = "1.17.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
async-trait = "0.1.52"
thiserror = "1.0.30"

[features]
default = ["simulate", "serde"]
simulate = ["minifb"]
hardware = ["rs_ws281x"]
