[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
minifb = { version = "^0.19.3", optional = true }
rs_ws281x = { version = "*", optional = true }
color = {path = "../color"}

[features]
simulate = ["minifb"]
hardware = ["rs_ws281x"]
